# BuildMonitor

./: .gitignore  BuildMonitor.sln  README.md
Assets/: build_status.blend
BuildMonitor/: BuildMonitor.cpp  BuildMonitor.h  BuildMonitor.pro  BuildMonitor.ui  BuildMonitor.vcxproj  BuildMonitor.vcxproj.filters  BuildMonitorServerCommunication.cpp  BuildMonitorServerCommunication.h  BuildMonitorServerWorker.cpp  BuildMonitorServerWorker.h  FixInformation.h  JenkinsCommunication.cpp  JenkinsCommunication.h  ProjectInformation.h  ProjectPicker.ui  ProjectPickerDialog.cpp  ProjectPickerDialog.h  ProjectStatus.h  ServerOverviewTable.cpp  ServerOverviewTable.h  Settings.cpp  Settings.h  Settings.ui  SettingsDialog.cpp  SettingsDialog.h  SingleInstanceMode.h  TrayContextAction.h  TrayContextMenu.cpp  TrayContextMenu.h  main.cpp
BuildMonitorServer/: AcceptThread.cpp  AcceptThread.h  BuildMonitorServer.cpp  BuildMonitorServer.h  BuildMonitorServer.pro  BuildMonitorServer.qrc  BuildMonitorServer.ui  BuildMonitorServer.vcxproj  BuildMonitorServer.vcxproj.filters  FixInfo.h  FixOverviewTable.cpp  FixOverviewTable.h  Server.cpp  Server.h  main.cpp
build_monitor/: Cargo.toml  LICENSE-MIT
build_monitor/capi/: Cargo.toml  build.bat  build.sh
build_monitor/capi/src/: lib.rs
build_monitor/cli/: Cargo.toml
build_monitor/cli/src/: main.rs
build_monitor/src/: error.rs  lib.rs  monitor.rs  monitor_client.rs  monitor_server.rs  monitors.rs  project.rs  utils.rs
build_monitor_qt/: BuildMonitor.cpp  BuildMonitor.h  BuildMonitor.pro  BuildMonitor.qrc  BuildMonitor.rc  BuildMonitor.ui  (+16 more)
(+8 files in other folders)
